--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -1,4 +1,4 @@
-name: Auto Merge Main to Testing
+name: Auto Merge Main to Testing in server
 
 on:
   push:
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
-            token: ${{secrets.ACTIONS.PAT}}
+            token: ${{secrets.ACTIONS_PAT}}
 
       - name: Configure Git
         run: |
