--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start":"nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -12,15 +12,19 @@
   "dependencies": {
     "apollo-server-express": "^3.13.0",
     "cors": "^2.8.5",
+    "express": "^4.19.2",
     "express-session": "^1.18.0",
     "graphql": "^16.9.0",
     "graphql-tools": "^9.0.1",
+    "jest": "^29.7.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.4.4",
+    "node-fetch": "^3.3.2",
     "nodemon": "^3.1.4",
     "react-server": "^0.8.1",
     "resolvers": "^1.0.0",
     "superagent": "^9.0.2",
+    "supertest": "^7.0.0",
     "tailwindcss": "^3.4.4"
   }
 }
